# ToDoList

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  db.sqlite3example  docker-compose.yml  pyproject.toml  pytest.ini
Frontend/: package-lock.json  package.json
Frontend/TodoFront/: index.html  package-lock.json  package.json
Frontend/TodoFront/src/: App.jsx  main.jsx
Frontend/TodoFront/src/components/: Navbar.jsx  Sidebar.jsx
Frontend/TodoFront/src/context/: AuthContext.jsx
Frontend/TodoFront/src/pages/: Categories.jsx  Dashboard.jsx  Home.jsx  Login.jsx  PublicTaskPage.jsx  ReceivedTasks.jsx  Register.jsx  SharedTasks.jsx
Frontend/TodoFront/src/routes/: PrivateRoute.jsx
Frontend/TodoFront/src/services/: api.js
Frontend/TodoFront/src/styles/: categories.css  dashboard.css  edit-category-modal.css  home.css  import-public-task-modal.css  login.css  modal.css  pagination.css  public-task.css  received-shares.css  register.css  share-modal.css  (+6 more)
config/: settings.py  urls.py
tasks/: models.py  serializers.py  signals.py  urls.py  views.py
tasks/management/commands/: cleanup_taskscompleteds.py  cleanup_taskshares.py
tests/backend/: conftest.py  tests_auth.py  tests_categories.py  tests_receivedview.py  tests_sharedview.py  tests_shares.py  tests_tasks.py
tests/frontend/: conftest.py  test_categories.py  test_create_task.py  test_delete_task.py  test_edittask.py  test_import_task.py  test_login.py  test_logout.py  test_navbar.py  test_private_task.py  test_public_task.py  test_received_tasks.py  test_register.py  test_sidebar.py
(+13 files in other folders)
