[project]
name = "todolist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "faker>=40.19.1",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.1",
]
